[gd_scene load_steps=3 format=3 uid="uid://b8sbow42o0nrr"]

[ext_resource type="Script" uid="uid://c316y27offyvp" path="res://scenes/camera/camera_raise_zone/camera_raise_zone.gd" id="1_c23lo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwjlv"]

[node name="CameraRaiseZone" type="Area2D"]
scale = Vector2(1, 1.0171672)
collision_layer = 2048
collision_mask = 4096
script = ExtResource("1_c23lo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dwjlv")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
